Test Cases/V2/Test Case/Tests/TT-238 - VTO/Test Cases/Negative/TT_238_7_10YearTarget.tc
<?xml version="1.0" encoding="UTF-8"?>
<TestCaseEntity>
   <description></description>
   <name>TT_238_7_10YearTarget</name>
   <tag></tag>
   <comment></comment>
   <testCaseGuid>fcdcbd14-3cfa-4379-85af-d6b36de4cc3e</testCaseGuid>
</TestCaseEntity>
